Update Demo to new TSynoDevice

--- a/demo/01/Demo01.dproj
+++ b/demo/01/Demo01.dproj
@@ -108,6 +108,7 @@
         </DCCReference>
         <DCCReference Include="..\..\source\uNetUtils.pas"/>
         <DCCReference Include="..\..\source\uSynoDiscovery.pas"/>
+        <DCCReference Include="..\..\source\uSyno.Types.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
